--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 	<body>
 		<div class="wrapper">
 
-			<h1>Is this making sense?</h1>
-			<p>This will serve as a little exercise to see how well all this stuff is clicking, in addition to getting you comfortable with some more advanced styling techniques. This is a screenshot of a site.</p>
-
 			<div class="section">
-				<h6>1. Some boxes in a row</h6>
+				<h1>Is this making sense?</h1>
+				<p>This will serve as a little exercise to see how well all this stuff is clicking, in addition to getting you comfortable with some more advanced styling techniques. This is a screenshot of a site.</p>
+			</div>
+			
+			<h6>1. Some boxes in a row</h6>
+			<div class="section">
 				<p>Here’s a bunch of boxes floated next to each other with numbers in the middle, but two of them are special.</p>
 
 				<div class="block">
@@ -27,7 +29,7 @@
 					<p>L</p>
 				</div>
 				<div class="block">
-					<p>o</p>
+					<p>O</p>
 				</div>
 				<div class="block">
 					<p>C</p>
@@ -43,14 +45,14 @@
 				</div>
 			</div>
 
-			<div>
-				<h6>2. This is a photo of a cat</h6>
+			<h6>2. This is a photo of a cat</h6>
+			<div class="section">
 				<p>Drop an image of a cat here that fills the width of this column. You’ll probably have to use something like width: 100%;. And for that little guy, you’ll have to use something like font-family: monospace;.</p>
 				<img src="images/cat.jpg" width="100%" height="auto"/>
 			</div>
-
-			<div>
-				<h6>3. This is a big link</h6>
+			
+			<h6>3. This is a big link</h6>
+			<div class="section">
 				<p>When you hover over it, it changes color. When you click it, it opens up Google in another tab. You don’t need to use a div for this. An a tag is an inline element, but you can make it a block element with css.</p>
 				<a href="http://www.google.com/" target="_blank">Take me to Google</a>
 			</div>
