--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
 				<p>This will serve as a little exercise to see how well all this stuff is clicking, in addition to getting you comfortable with some more advanced styling techniques. This is a screenshot of a site.</p>
 			</div>
 			
-			<h6>1. Some boxes in a row</h6>
+			<h2>1. Some boxes in a row</h2>
 			<div class="section">
 				<p>Here’s a bunch of boxes floated next to each other with numbers in the middle, but two of them are special.</p>
 
 				<div class="block">
-					<p>B</p>
+					<h2>B</h2>
+				</div>
+				<div class="block special">
+					<h2>L</h2>
 				</div>
 				<div class="block">
-					<p>L</p>
+					<h2>O</h2>
 				</div>
 				<div class="block">
-					<p>O</p>
+					<h2>C</h2>
+				</div>
+				<div class="block special">
+					<h2>K</h2>
 				</div>
 				<div class="block">
-					<p>C</p>
+					<h2>S</h2>
 				</div>
 				<div class="block">
-					<p>K</p>
-				</div>
-				<div class="block">
-					<p>S</p>
-				</div>
-				<div class="block">
-					<p>!</p>
+					<h2>!</h2>
 				</div>
 			</div>
 
-			<h6>2. This is a photo of a cat</h6>
+			<h2>2. This is a photo of a cat</h2>
 			<div class="section">
-				<p>Drop an image of a cat here that fills the width of this column. You’ll probably have to use something like width: 100%;. And for that little guy, you’ll have to use something like font-family: monospace;.</p>
+				<p>Drop an image of a cat here that fills the width of this column. You’ll probably have to use something like <span>width: 100%;</span>. And for that little guy, you’ll have to use something like <span>font-family: monospace;</span>.</p>
 				<img src="images/cat.jpg" width="100%" height="auto"/>
 			</div>
 			
-			<h6>3. This is a big link</h6>
+			<h2>3. This is a big link</h2>
 			<div class="section">
-				<p>When you hover over it, it changes color. When you click it, it opens up Google in another tab. You don’t need to use a div for this. An a tag is an inline element, but you can make it a block element with css.</p>
+				<p>When you hover over it, it changes color. When you click it, it opens up Google in another tab. You don’t need to use a <span>div</span> for this. An a tag is an inline element, but you can make it a block element with css.</p>
 				<a href="http://www.google.com/" target="_blank">Take me to Google</a>
 			</div>
 
